objects/Project_Contact_Link__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Contact Links</relationshipLabel>
        <relationshipName>Project_Contact_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Project Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Financial Representative</fullName>
                </value>
                <value>
                    <fullName>IT/Technical Representative</fullName>
                </value>
                <value>
                    <fullName>LOB Lead</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Registrant Contact</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>Web Administrator/Designer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Initiatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Supports many-to-many relationship between Project records (custom) and Contact records.</description>
    <label>Project Contact Link</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Project Contact Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contact Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>